 - AutoScaling API update: AttachLoadBalancerTargetGroups DescribeLoadBalancerTargetGroups DetachLoadBalancerTargetGroups
 - MachineLearning API update: extra informational attributes on returned objects
 - EMR API update: FailureDetails on StepStatus object
 - ECS API update: MemoryReservation and NetworkMode

0.27 25 Jun 2016 
 - RestXml (S3, f.ex) services now complete responses from headers (shardiwal)
 - New API: ServiceCatalog
 - MachineLearning API update: Tagging API
 - IoT API update: ListPolicyPrincipals
 - EC2 API update: GetConsoleOutput, DescribeAllSpotFleetRequests 
 - SSM API update: Tagging
 - SNS API update: sending SMSs' to international phones
 - SES API update: SetIdentityHeadersInNotificationsEnabled added
 - S3 API update: ListObjectsV2 StartAfter attribute fix
 - DirectConnect API update: DescribeConnectionLoa and DescribeInterconnectLoa operations
 - DeviceFarm: remote session operations
 - DS: tagging operations
 - DMS: certificate operations
 - CodePipeline: API update
 - EC2: ID format operations
 - Config: API update
 - GameLift: Runtime configuration operations
 - RDS: API update
 - SSM: Notification options
 - EFS: definitive API (Performance parameters added)
 - ECS: task roles
 - CloudFormation: docu for new capability CAPABILITY_NAMED_IAM
 - CognitoIdentity: API update
 - DynamoDBStreams: API update
 - ACM: FailureReason added
 - IoT: DynamoDBAction Operation can be specified

0.26 29 May 2016
 - New Service: Discovery
 - New Service: ApplicationAutoScaling
 - KMS API update
 - ECS API update
 - CloudTrail API update
 - S3 API update: new ListObjectsV2 method
 - ApiGateway API update: Passthrough behaviour
 - SSM API update: Modify and Describe DocumentPermission
 - StorageGateway API update: ListTapes
 - EC2 API update: DescribeSecurityGroupReferences and DescribeStaleSecurityGroups
 - CloudFormation API update
 - EMR API update: ListInstances can filter
 - Workspaces API update: Tagging operations